@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 23:52:03 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2002/12/02 15:20:10 wiz Exp $
 include/libmng.h
 include/libmng_conf.h
 include/libmng_types.h
@@ -7,3 +7,10 @@ lib/libmng.la
 lib/libmng.so
 lib/libmng.so.1
 lib/libmng.so.1.0
+man/man3/libmng.3
+man/man5/jng.5
+man/man5/mng.5
+share/doc/mng/Plan1.png
+share/doc/mng/Plan2.png
+share/doc/mng/libmng.txt
+@dirrm share/doc/mng
